@@ -138,4 +138,5 @@ BUGFIXES:
 118 ==> 396496 - QSQLITE -> MYSQL loses grouping information.
 119 ==> 382311 - Photos in collapsed groups are incorrectly excluded if first photo in group does not match filter.
 120 ==> 400981 - Appimage not working anymore: /lib64/libfontconfig.so.1: undefined symbol: FT_Done_MM_Var.
-121 ==> 
+121 ==> 406054 - Export to google photo a picture with a "title" => no "title" in google photo.
+122 ==> 
